--- a/pokemon_game/index.html
+++ b/pokemon_game/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Pokemon Game</title>
-    </head>
-    <body>
-        <h1>Evan's Pokemon Battle</h1>
-        <div class="pokemon-list">
-
-        </div>
-
         <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+        <title>Pokemon Game</title>
+    </head>
+    <body>
+        <h1>Evan's Pokemon Battle</h1>
+        <div id="pokedex">
+
+        </div>
+
+
         <script src="app.js" charset="utf-8"></script>
     </body>
 </html>
