Added a carousel effect to the pokemon pokedex

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -11,16 +11,13 @@
     </head>
     <body>
         <h1>Evan's Pokemon Battle</h1>
-        <div class="cycle-buttons" id="previous">
-            <
-        </div>
-        <div id="pokedex" onclick="location.href='pages/battle.html'">
+        <a href="../index.html">Back to Home</a>
+        <div id="pokedex">
 
         </div>
-        <div class="cycle-buttons" id="next">
-            >
-        </div>
+        <div id="arena">
 
-        <script src="app.js" charset="utf-8"></script>
+        </div>
+        <script src="../app.js" charset="utf-8"></script>
     </body>
 </html>
