--- a/pokemon_game/index.html
+++ b/pokemon_game/index.html
@@ -11,10 +11,11 @@
     </head>
     <body>
         <h1>Evan's Pokemon Battle</h1>
+        <h2>Pick Your Pokemon</h2>
         <div class="cycle-buttons" id="previous">
             <
         </div>
-        <div id="pokedex" onclick="location.href='pages/battle.html'">
+        <div id="pokedex">
 
         </div>
         <div class="cycle-buttons" id="next">
