Click funtionality on choose your pokemon that brings you to next page and random enemy generator

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -18,6 +18,9 @@
         <div id="arena">
 
         </div>
-        <script src="../app.js" charset="utf-8"></script>
+        <div id="enemy">
+
+        </div>
+        <script src="battle.js" charset="utf-8"></script>
     </body>
 </html>
