added some modal functionality, no style yet

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -15,8 +15,19 @@
         <div id="pokedex">
 
         </div>
-        <div id="arena">
 
+        <div id="arena">
+            <button class="modal-button" id="call-button">Walk through the Grass?</button>
+            <div id="modal">
+                <h1>A pokemon jumped out of the tall grass!</h1>
+                <p>Would you like to run away</p>
+                <p>or stay and fight?</p>
+                <div id="modal-footer">
+                    <a class="modal-button" id="run" href="#">Run</a>
+                    <a class="modal-button" id="fight" href="#">Fight</a>
+                </div>
+
+            </div>
         </div>
         <div id="enemy">
 
