Added some fight functionality, working out bugs with the logic

--- a/pokemon_game/index.html
+++ b/pokemon_game/index.html
@@ -11,16 +11,20 @@
         <title>Pokemon Game</title>
     </head>
     <body>
-        <h1>Evan's Pokemon Battle</h1>
-        <h2>Pick Your Pokemon</h2>
-        <div class="cycle-buttons" id="previous">
-            <
-        </div>
-        <div id="pokedex">
+        <header>
+            <h1>Evan's Pokemon Battle</h1>
+            <h2>Pick Your Pokemon</h2>
+        </header>
+        <div class="container">
+            <div class="cycle-buttons" id="previous">
+                <
+            </div>
+            <div id="pokedex">
 
-        </div>
-        <div class="cycle-buttons" id="next">
-            >
+            </div>
+            <div class="cycle-buttons" id="next">
+                >
+            </div>
         </div>
 
         <script src="app.js" charset="utf-8"></script>
