--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="battle.css">
         <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Evan's Pokemon Battle</h1>
-        <a href="../index.html">Back to Home</a>
+        <a href="../index.html">Choose A Different Pokemon</a>
         <div id="pokedex">
 
         </div>
