Finished game logic in js

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -10,27 +10,31 @@
         <title>Pokemon Game</title>
     </head>
     <body>
-        <h1>Evan's Pokemon Battle</h1>
-        <a href="../index.html">Choose A Different Pokemon</a>
-        <div id="pokedex">
-
-        </div>
-
-        <div id="arena">
-            <button class="modal-button" id="call-button">Walk through the Grass?</button>
-            <div id="modal">
-                <h1>A pokemon jumped out of the tall grass!</h1>
-                <p>Would you like to run away</p>
-                <p>or stay and fight?</p>
-                <div id="modal-footer">
-                    <a class="modal-button" id="run" href="#">Run</a>
-                    <a class="modal-button" id="fight" href="#">Fight</a>
-                </div>
+        <header>
+            <h1>Evan's Pokemon Battle</h1>
+            <a href="../index.html">Choose A Different Pokemon</a>
+        </header>
+        <div class="container">
+            <div id="pokedex">
 
             </div>
-        </div>
-        <div id="enemy">
 
+            <div id="arena">
+                <button class="modal-button" id="call-button">Walk through the Grass?</button>
+                <div id="modal">
+                    <h1>A pokemon jumped out of the tall grass!</h1>
+                    <p>Would you like to run away</p>
+                    <p>or stay and fight?</p>
+                    <div id="modal-footer">
+                        <a class="modal-button" id="run" href="#">Run</a>
+                        <a class="modal-button" id="fight" href="#">Fight</a>
+                    </div>
+
+                </div>
+            </div>
+            <div id="enemy">
+
+            </div>
         </div>
         <script src="battle.js" charset="utf-8"></script>
     </body>
