Added some size parameters based on screen width, larger screen displays inline

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="battle.css">
+        <meta name="viewport" content="width=device-width">
         <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -18,9 +19,9 @@
             <div id="pokedex">
 
             </div>
-
+            <button class="modal-button" id="call-button">Walk through the Grass?</button>
             <div id="arena">
-                <button class="modal-button" id="call-button">Walk through the Grass?</button>
+
                 <div id="modal">
                     <h1>A pokemon jumped out of the tall grass!</h1>
                     <p>Would you like to run away</p>
