touched on a little more css

--- a/pokemon_game/pages/battle.html
+++ b/pokemon_game/pages/battle.html
@@ -13,15 +13,14 @@
     <body>
         <header>
             <h1>Evan's Pokemon Battle</h1>
-            <a href="../index.html">Choose A Different Pokemon</a>
+            <a href="../index.html">Choose Another Pokemon</a>
         </header>
         <div class="container">
             <div id="pokedex">
 
             </div>
             <button class="modal-button" id="call-button">Walk through the Grass?</button>
-            <div id="arena">
-
+            <!-- <div id="arena"> -->
                 <div id="modal">
                     <h1>A pokemon jumped out of the tall grass!</h1>
                     <p>Would you like to run away</p>
@@ -32,7 +31,7 @@
                     </div>
 
                 </div>
-            </div>
+            <!-- </div> -->
             <div id="enemy">
 
             </div>
